Use sbt 0.13 from eclipse.

--- a/pom.xml
+++ b/pom.xml
@@ -195,134 +195,79 @@
       </dependency>
       <!-- toolchain, sbt -->
       <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>actions_${sbt.compiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>api_${sbt.compiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>cache_${sbt.compiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>classfile_${sbt.compiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
+        <groupId>org.scala-sbt</groupId>
         <artifactId>classpath_${sbt.compiled.version}</artifactId>
         <version>${sbt.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>collections_${sbt.compiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>compile_${sbt.compiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-       <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>control_${sbt.compiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>incremental-compiler_${sbt.compiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>io_${sbt.compiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>ivy_${sbt.compiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>launcher-interface_${sbt.compiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
+        <groupId>org.scala-sbt</groupId>
         <artifactId>logging_${sbt.compiled.version}</artifactId>
         <version>${sbt.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>main_${sbt.compiled.version}</artifactId>
+        <groupId>org.scala-sbt</groupId>
+        <artifactId>io_${sbt.compiled.version}</artifactId>
         <version>${sbt.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>persist_${sbt.compiled.version}</artifactId>
+        <groupId>org.scala-sbt</groupId>
+        <artifactId>control_${sbt.compiled.version}</artifactId>
         <version>${sbt.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
+        <groupId>org.scala-sbt</groupId>
+        <artifactId>classfile_${sbt.compiled.version}</artifactId>
+        <version>${sbt.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.scala-sbt</groupId>
         <artifactId>process_${sbt.compiled.version}</artifactId>
         <version>${sbt.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>run_${sbt.compiled.version}</artifactId>
+        <groupId>org.scala-sbt</groupId>
+        <artifactId>relation_${sbt.compiled.version}</artifactId>
         <version>${sbt.version}</version>
       </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>tasks_${sbt.compiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>task-system_${sbt.compiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>sbt_${sbt.compiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>completion_${sbt.compiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>launcher_${sbt.compiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
-        <artifactId>precompiled-${sbt.compiled.version}-${scala.precompiled.version}</artifactId>
-        <version>${sbt.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.scala-tools.sbt</groupId>
+       <dependency>
+        <groupId>org.scala-sbt</groupId>
         <artifactId>interface_${sbt.compiled.version}</artifactId>
+        <version>${sbt.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.scala-sbt</groupId>
+        <artifactId>persist_${sbt.compiled.version}</artifactId>
+        <version>${sbt.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.scala-sbt</groupId>
+        <artifactId>api_${sbt.compiled.version}</artifactId>
+        <version>${sbt.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.scala-sbt</groupId>
+        <artifactId>compiler-integration_${sbt.compiled.version}</artifactId>
+        <version>${sbt.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.scala-sbt</groupId>
+        <artifactId>incremental-compiler_${sbt.compiled.version}</artifactId>
+        <version>${sbt.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.scala-sbt</groupId>
+        <artifactId>compile_${sbt.compiled.version}</artifactId>
+        <version>${sbt.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.scala-sbt</groupId>
+        <artifactId>compiler-interface_${sbt.compiled.version}</artifactId>
         <version>${sbt.version}</version>
       </dependency>
       <dependency>
         <groupId>jline</groupId>
         <artifactId>jline</artifactId>
         <version>${jline.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.ivy</groupId>
-        <artifactId>ivy</artifactId>
-        <version>${ivy.version}</version>
       </dependency>
       <dependency>
         <groupId>org.scala-tools.sbinary</groupId>
