Added alternative launch delegates for Scala Eclipse applications
The new launch delegates are added to the Equinox weaving launch
configurations, if available in the Eclipse setup.

Fix #1001158

--- a/org.scala-ide.sdt.build/pom.xml
+++ b/org.scala-ide.sdt.build/pom.xml
@@ -61,6 +61,12 @@
       <layout>p2</layout>
       <url>${repo.scalariform}</url>
     </repository>
+    <repository>
+      <id>equinox.launcher</id>
+      <name>Equinox weaving launcher p2 repository</name>
+      <layout>p2</layout>
+      <url>${repo.equinox.launcher}</url>
+    </repository>
   </repositories>
 
   <dependencies>
