--- a/org.scala-ide.sdt.debug/plugin.xml
+++ b/org.scala-ide.sdt.debug/plugin.xml
@@ -33,5 +33,25 @@
             sourcePathComputerId="org.eclipse.jdt.launching.sourceLookup.javaSourcePathComputer"
             type="scala.application">
       </launchDelegate>
+      <launchDelegate
+            delegate="scala.tools.eclipse.launching.ScalaEclipseApplicationLaunchConfigurationDelegate"
+            delegateDescription="The Scala JVM Launcher supports debugging of Eclipse Scala using the new Scala debugger"
+            id="scala.eclipse.application.new"
+            modes="debug"
+            name="Scala Application (new debugger)"
+            sourceLocatorId="org.eclipse.pde.ui.launcher.PDESourceLookupDirector"
+            sourcePathComputerId="org.eclipse.jdt.launching.sourceLookup.javaSourcePathComputer"
+            type="org.scala-ide.ew.launcher.RuntimeWorkbench">
+      </launchDelegate>
+      <launchDelegate
+            delegate="scala.tools.eclipse.launching.ScalaEclipseJUnitLaunchConfigurationDelegate"
+            delegateDescription="The Scala JVM Launcher supports debugging of JUnit Eclipse Scala using the new Scala debugger"
+            id="scala.junit.eclipse.application.new"
+            modes="debug"
+            name="Scala Application (new debugger)"
+            sourceLocatorId="org.eclipse.pde.ui.launcher.PDESourceLookupDirector"
+            sourcePathComputerId="org.eclipse.jdt.launching.sourceLookup.javaSourcePathComputer"
+            type="org.scala-ide.ew.launcher.JunitLaunchConfig">
+      </launchDelegate>
     </extension>
 </plugin>
