Use full version of sbinary.

--- a/org.scala-ide.sbt.full.library/pom.xml
+++ b/org.scala-ide.sbt.full.library/pom.xml
@@ -100,7 +100,7 @@
     </dependency>    
     <dependency>
       <groupId>org.scala-tools.sbinary</groupId>
-      <artifactId>sbinary_${sbt.compiled.version}</artifactId>
+      <artifactId>sbinary_${sbinary.compiled.version}</artifactId>
       <optional>true</optional>
     </dependency>
   </dependencies>
