--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,6 @@
     <scala.major.minor.version>2.9</scala.major.minor.version>
     <scala.library.version>${scala.version}</scala.library.version>
     <sbt.compiled.version>2.9.2</sbt.compiled.version>
-    <sbinary.compiled.version>2.9.2</sbinary.compiled.version>
     <version.suffix>2_09</version.suffix>
     <version.tag>local</version.tag>
 
@@ -84,7 +83,6 @@
         <scala.major.minor.version>2.10</scala.major.minor.version>
         <scala.library.version>${scala.version}</scala.library.version>
         <sbt.compiled.version>2.10</sbt.compiled.version>
-        <sbinary.compiled.version>2.10.0-SNAPSHOT</sbinary.compiled.version>
         <version.suffix>2_10</version.suffix>
 
         <repo.scala-refactoring>${repo.scala-ide.root}/scala-refactoring-trunk</repo.scala-refactoring>
@@ -271,7 +269,7 @@
       </dependency>
       <dependency>
         <groupId>org.scala-tools.sbinary</groupId>
-        <artifactId>sbinary_${sbinary.compiled.version}</artifactId>
+        <artifactId>sbinary_${sbt.compiled.version}</artifactId>
         <version>${sbinary.version}</version>
       </dependency>
       <!-- sdt.core dependencies -->
