Created extension point for SourceFileProvider so that the Hyperlinking logic can be easily used by other plugins (e.g., worksheet)
The extension mechanism is such that other plugins will be able to register new source file provider and benefit of the existing
declaration hyperlink detection logic.

The fix was motivated by https://github.com/dragos/scala-worksheet/issues/23, and hopefully it will be useful for others.

Fix #1001208

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -2,6 +2,7 @@
 <?eclipse version="3.2"?>
 <plugin>
    <extension-point id="reconciliationParticipants" name="Reconcilation Participants" schema="schema/reconciliationParticipants.exsd"/>
+   <extension-point id="sourcefileprovider" name="Source file Providers" schema="schema/sourceFileProviders.exsd"/>
    <extension
          point="org.eclipse.ui.propertyPages">
       <page
@@ -869,6 +870,13 @@
       commandId="org.eclipse.shortcut.scala.debug"
       schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
       sequence="M2+M3+D S" />
+  </extension>
+
+  <extension point="org.scala-ide.sdt.core.sourcefileprovider">
+    <provider
+      class="scala.tools.eclipse.javaelements.ScalaSourceFileProvider"
+      file_extension="scala">
+    </provider>
   </extension>
 
   <extension point="org.scala-ide.sdt.aspects.cuprovider">
