--- a/org.scala-ide.sdt.build/pom.xml
+++ b/org.scala-ide.sdt.build/pom.xml
@@ -138,7 +138,7 @@
         </configuration>
       </plugin>
       <!-- create a package with the sources -->
-      <plugin>
+<!--       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
         <executions>
@@ -150,7 +150,7 @@
           </execution>
         </executions>
       </plugin>
-      <!-- create the source plug-in -->
+ -->      <!-- create the source plug-in -->
       <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>tycho-source-plugin</artifactId>
