Added new build profile for Scala 2.11
Note that the p2 repo's name of both scalariform and scala-refactoring contain
now the Scala major version they have been compiled with. Doing so will make
our life easier in the future ("trunk" is a moving target, we need a stable
identifier).

Also, since minor Scala releases are binary compatible, it should be ok to use
scalariform and scala-refactoring compiled against Scala 2.10.0 also for
building the IDE for Scala 2.10.1.

The changes in org.scala-ide.scala.compiler/pom.xml needed to support Scala
2.11.x are exact duplicates of what we do for Scala 2.10.x. Unfortunately, it
doesn't seem to be possible to avoid the duplication because of Maven
limitations (e.g., http://jira.codehaus.org/browse/MNG-3328). Furthermore,
consider that once we drop support for Scala 2.9.x, then we will no longer need
to have the above mentioned duplication.

Re #1001256

--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,6 @@
     </profile>
 
     <profile>
-      <!-- Scala 2.10.x -->
       <id>scala-2.10.x</id>
       <properties>
         <scala.version>2.10.0-SNAPSHOT</scala.version>
@@ -85,12 +84,27 @@
         <sbt.compiled.version>2.10</sbt.compiled.version>
         <version.suffix>2_10</version.suffix>
 
-        <repo.scala-refactoring>${repo.scala-ide.root}/scala-refactoring-trunk</repo.scala-refactoring>
-        <repo.scalariform>${repo.scala-ide.root}/scalariform-trunk</repo.scalariform>
+        <repo.scala-refactoring>${repo.scala-ide.root}/scala-refactoring-210x</repo.scala-refactoring>
+        <repo.scalariform>${repo.scala-ide.root}/scalariform-210x</repo.scalariform>
         <repo.typesafe>http://repo.typesafe.com/typesafe/ide-2.10</repo.typesafe>
       </properties>
     </profile>
 
+    <profile>
+      <id>scala-2.11.x</id>
+      <properties>
+        <scala.version>2.11.0-SNAPSHOT</scala.version>
+        <scala.major.minor.version>2.11</scala.major.minor.version>
+        <scala.library.version>${scala.version}</scala.library.version>
+        <sbt.compiled.version>2.11</sbt.compiled.version>
+        <version.suffix>2_11</version.suffix>
+
+        <repo.scala-refactoring>${repo.scala-ide.root}/scala-refactoring-211x</repo.scala-refactoring>
+        <repo.scalariform>${repo.scala-ide.root}/scalariform-211x</repo.scalariform>
+        <repo.typesafe>http://repo.typesafe.com/typesafe/ide-2.11</repo.typesafe>
+      </properties>
+    </profile>
+    
     <profile>
       <!-- Eclipse Juno -->
       <id>eclipse-juno</id>
