--- a/org.scala-ide.scala.library/pom.xml
+++ b/org.scala-ide.scala.library/pom.xml
@@ -13,21 +13,17 @@
   <packaging>bundle</packaging>
 
   <properties>
-    <!-- some default values, can be overwritten by profiles -->
+    <!-- default value for Scala 2.10+, can be overwritten by profiles -->
     <!-- dirty trick to avoid code duplication -->
-    <scala.library.third-part>scala-dbc</scala.library.third-part>
+    <scala.library.third-part>scala-actors</scala.library.third-part>
   </properties>
 
   <profiles>
     <profile>
       <!--- the profile using the default values. Scala 2.9.x -->
       <id>scala-2.9.x</id>
-    </profile>
-    <profile>
-      <!-- Scala 2.10.x -->
-      <id>scala-2.10.x</id>
       <properties>
-        <scala.library.third-part>scala-actors</scala.library.third-part>
+        <scala.library.third-part>scala-dbc</scala.library.third-part>
       </properties>
     </profile>
   </profiles>
