Added Scala Plugin Spy.
This adds a view that can show the cursor offset in the current document,
and additional Scala compiler information:

* tree.pos (range positions)
* tree.tpe
* tree.symbol
* tree.tpe

--- a/org.scala-ide.sdt.build/pom.xml
+++ b/org.scala-ide.sdt.build/pom.xml
@@ -20,6 +20,7 @@
     <module>../org.scala-ide.sdt.aspects</module>
     <module>../org.scala-ide.sdt.core</module>
     <module>../org.scala-ide.sdt.core.tests</module>
+    <module>../org.scala-ide.sdt.spy</module>
     <module>../org.scala-ide.sdt.debug</module>
     <module>../org.scala-ide.sdt.debug.tests</module>
     <module>../org.scala-ide.sdt.weaving.feature</module>
