Fixed issue in build definition for Scala 2.9.x
When no profile is provided to the IDE build, we implicitly build the IDE for
Scala 2.9.x. In SHA: a88a43a05b619935a27cc024ff13ce0f480cd624 I did not
consider this, and if no profile is passed then the value of
<scala.library.third-part> is `scala-actors` (instead of `scala-dbc`), hence
the build fails.

Re #1001256

--- a/org.scala-ide.scala.library/pom.xml
+++ b/org.scala-ide.scala.library/pom.xml
@@ -13,17 +13,23 @@
   <packaging>bundle</packaging>
 
   <properties>
-    <!-- default value for Scala 2.10+, can be overwritten by profiles -->
-    <!-- dirty trick to avoid code duplication -->
-    <scala.library.third-part>scala-actors</scala.library.third-part>
+    <!-- default value for Scala 2.9.x, can be overwritten by profiles -->
+    <scala.library.third-part>scala-dbc</scala.library.third-part>
   </properties>
 
   <profiles>
     <profile>
-      <!--- the profile using the default values. Scala 2.9.x -->
-      <id>scala-2.9.x</id>
+      <!--- the profile using the default values. Scala 2.10.x -->
+      <id>scala-2.10.x</id>
       <properties>
-        <scala.library.third-part>scala-dbc</scala.library.third-part>
+        <scala.library.third-part>scala-actors</scala.library.third-part>
+      </properties>
+    </profile>
+    <profile>
+      <!--- the profile using the default values. Scala 2.11.x -->
+      <id>scala-2.11.x</id>
+      <properties>
+        <scala.library.third-part>scala-actors</scala.library.third-part>
       </properties>
     </profile>
   </profiles>
