Remove ScalaIDE product definitions and dependencies.
Fixed #1001281.

--- a/org.scala-ide.sdt.core/build.properties
+++ b/org.scala-ide.sdt.core/build.properties
@@ -11,8 +11,4 @@ bin.includes = META-INF/,\
                about.png,\
                templates/,\
                target/lib/,\
-               plugin.properties,\
-               plugin_customization.ini,\
-               product.png,\
-               intro-scala.png,\
-               about.mappings
+               plugin.properties
