--- a/org.scala-ide.sdt.debug/plugin.xml
+++ b/org.scala-ide.sdt.debug/plugin.xml
@@ -54,4 +54,19 @@
             type="org.scala-ide.ew.launcher.JunitLaunchConfig">
       </launchDelegate>
     </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            category="org.scala-ide.sdt.core.preferences"
+            class="scala.tools.eclipse.debug.preferences.DebuggerPreferences"
+            id="org.scala-ide.sdt.debug.preferences"
+            name="Debug">
+      </page>
+   </extension>
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="scala.tools.eclipse.debug.preferences.DebugerPreferencesInitializer">
+      </initializer>
+   </extension>
 </plugin>
