Added attach and listen Scala remote connectors
The new connectors are added to the platform through extension point.
Updated the computation of canTerminate and canDisconnect in ScalaDebugTarget.
Made ScalaDebugTestSession more flexible, to be able to launch modified launch configuration,
and execute random code during launch.
Modify the tcp ip spy to support communication both side (debugger listens or VM listens)
With tests and remote test launch configurations.

Fix #1001129

--- a/org.scala-ide.sdt.debug/plugin.xml
+++ b/org.scala-ide.sdt.debug/plugin.xml
@@ -69,4 +69,15 @@
             class="scala.tools.eclipse.debug.preferences.DebugerPreferencesInitializer">
       </initializer>
    </extension>
+   <extension
+         point="org.eclipse.jdt.launching.vmConnectors">
+      <vmConnector
+            class="scala.tools.eclipse.launching.SocketAttachConnectorScala"
+            id="org.scala-ide.sdt.debug.socketAttachConnector">
+      </vmConnector>
+      <vmConnector
+            class="scala.tools.eclipse.launching.SocketListenConnectorScala"
+            id="org.scala-ide.sdt.debug.socketListenConnector">
+      </vmConnector>
+   </extension>
 </plugin>
