--- a/org.scala-ide.sdt.debug.tests/test-workspace/breakpoints/.project
+++ b/org.scala-ide.sdt.debug.tests/test-workspace/breakpoints/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>debug</name>
+	<name>breakpoints</name>
 	<comment></comment>
 	<projects>
 	</projects>
