--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -809,7 +809,7 @@
             helpContextId="org.eclipse.jdt.junit.launch_shortcut"
             class="scala.tools.eclipse.launching.ScalaJUnitLaunchShortcut"
             modes="run, debug"
-            id="scala.tools.eclipse.scalatest.junitShortcut">
+            id="org.eclipse.shortcut.scala.junit">
          <contextualLaunch>
             <enablement>
                <with variable="selection">
@@ -859,6 +859,16 @@
       description="Shows inferred semicolons in the current editor"
       categoryId="org.eclipse.ui.category.textEditor"
       id="scala.tools.eclipse.toggleShowInferredSemicolonsAction"/>
+    <command
+      categoryId="scala.tools.eclipse.category"
+      description="Run Scala JUnit Test"
+      id="org.eclipse.shortcut.scala.junit.run"
+      name="Run Scala JUnit Test" />
+    <command
+      categoryId="scala.tools.eclipse.category"
+      description="Debug Scala JUnit Test"
+      id="org.eclipse.shortcut.scala.junit.debug"
+      name="Debug Scala JUnit Test" />
   </extension>
 
   <extension point="org.eclipse.ui.bindings">
@@ -870,6 +880,14 @@
       commandId="org.eclipse.shortcut.scala.debug"
       schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
       sequence="M2+M3+D S" />
+    <key
+      commandId="org.eclipse.shortcut.scala.junit.run"
+      schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+      sequence="M2+M3+T R" />
+    <key
+      commandId="org.eclipse.shortcut.scala.junit.debug"
+      schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+      sequence="M2+M3+T D" />
   </extension>
 
   <extension point="org.scala-ide.sdt.core.sourcefileprovider">
