--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,10 @@
     <!-- p2 repositories location -->
     <repo.eclipse.indigo>http://download.eclipse.org/releases/indigo/</repo.eclipse.indigo>
     <repo.eclipse.juno>http://download.eclipse.org/releases/juno</repo.eclipse.juno>
+    <repo.eclipse.kepler>http://download.eclipse.org/releases/kepler</repo.eclipse.kepler>
     <repo.ajdt.indigo>http://download.eclipse.org/tools/ajdt/37/update</repo.ajdt.indigo>
     <repo.ajdt.juno>http://download.eclipse.org/tools/ajdt/42/update</repo.ajdt.juno>
+    <repo.ajdt.kepler>http://download.eclipse.org/tools/ajdt/42/dev/update</repo.ajdt.kepler>
     <repo.equinox.launcher>http://www.chuusai.com/eclipse/equinox-weaving-launcher/</repo.equinox.launcher>
     <repo.scala-ide.root>http://download.scala-ide.org</repo.scala-ide.root>
 
@@ -49,9 +51,9 @@
     <tycho.test.jvmArgs>-Xmx1024m -XX:MaxPermSize=256m -Dsdtcore.headless -Dsdtcore.notimeouts ${tycho.test.weaving} ${tycho.test.OSspecific}</tycho.test.jvmArgs>
 
     <!-- dependencies repos -->
-    <eclipse.codename>juno</eclipse.codename>
-    <repo.eclipse>${repo.eclipse.juno}</repo.eclipse>
-    <repo.ajdt>${repo.ajdt.juno}</repo.ajdt>
+    <eclipse.codename>kepler</eclipse.codename>
+    <repo.eclipse>${repo.eclipse.kepler}</repo.eclipse>
+    <repo.ajdt>${repo.ajdt.kepler}</repo.ajdt>
 
      <!-- default values, can be overwritten by profiles -->
      <scala.version>2.9.3-SNAPSHOT</scala.version>
@@ -115,6 +117,18 @@
         <weaving.hook.plugin.version>1.0.200.v20120524-1707</weaving.hook.plugin.version>
       </properties>
     </profile>
+
+    <profile>
+      <!-- Eclipse Kepler -->
+      <id>eclipse-kepler</id>
+      <properties>
+        <eclipse.codename>kepler</eclipse.codename>
+        <repo.eclipse>${repo.eclipse.kepler}</repo.eclipse>
+        <repo.ajdt>${repo.ajdt.kepler}</repo.ajdt>
+        <weaving.hook.plugin.version>1.0.200.v20120524-1707</weaving.hook.plugin.version>
+      </properties>
+    </profile>
+
 
     <profile>
       <!-- some extra configuration for running tests with tycho on Mac OS -->
