--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <miglayout.version>3.7.4</miglayout.version>
     <log4j.version>1.2.17</log4j.version>
     <mockito.version>1.9.5</mockito.version>
+    <diffutils.version>1.2.1</diffutils.version>
 
     <!-- plugin versions -->
     <tycho.plugin.version>0.18.1</tycho.plugin.version>
