--- a/pom.xml
+++ b/pom.xml
@@ -56,11 +56,11 @@
     <repo.ajdt>${repo.ajdt.indigo}</repo.ajdt>
 
      <!-- default values, can be overwritten by profiles -->
-     <scala.version>2.9.3-SNAPSHOT</scala.version>
-     <scala.era.major.version>2.9</scala.era.major.version>
+     <scala.version>2.10.0</scala.version>
+     <scala.era.major.version>2.10</scala.era.major.version>
      <scala.library.version>${scala.version}</scala.library.version>
      <sbt.compiled.version>${scala.version}</sbt.compiled.version>
-     <version.suffix>2_09</version.suffix>
+     <version.suffix>2_10</version.suffix>
      <version.tag>local</version.tag>
 
     <!-- the repos containing the Scala dependencies -->
@@ -75,6 +75,10 @@
       <!--- the profile using the default values. Scala 2.9.x -->
       <id>scala-2.9.x</id>
       <properties>
+        <scala.version>2.9.3-SNAPSHOT</scala.version>
+        <scala.era.major.version>2.9</scala.era.major.version>
+        <version.suffix>2_09</version.suffix>
+
         <repo.scala-refactoring>${repo.scala-ide.root}/scala-refactoring-29x</repo.scala-refactoring>
         <repo.scalariform>${repo.scala-ide.root}/scalariform-29x</repo.scalariform>
         <repo.typesafe>http://repo.typesafe.com/typesafe/ide-2.9</repo.typesafe>
@@ -106,7 +110,7 @@
         <repo.typesafe>http://repo.typesafe.com/typesafe/ide-2.11</repo.typesafe>
       </properties>
     </profile>
-    
+
     <profile>
       <!-- Eclipse Juno -->
       <id>eclipse-juno</id>
