Use Scala specific task markers.
Don't use Java task markers for Scala sources, as the Java builder
removes them all on "full build", which is what we trigger from the
Sbt build manager if:

* Java sources need recompilation
* resources (non-source files) exist on the source path (so they are 
  copied to the output folder)

This commit adds a Scala specific marker type (subtype of the Java one)
that preserves all functionality, but is only handled by our code.

Fixed #1001401, #1000975.

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -399,6 +399,17 @@
       <super type="org.eclipse.jdt.core.problem"/>
       <persistent value="true"/>
    </extension>
+   <extension
+         id="task"
+         name="Scala task"
+         point="org.eclipse.core.resources.markers">
+      <super
+            type="org.eclipse.jdt.core.task">
+      </super>
+      <persistent
+            value="true">
+      </persistent>
+   </extension>
 
    <extension
          point="org.eclipse.ui.editors.annotationTypes">
