Uses a specific scala version for the version updater

--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,9 @@
           <version>0.1.0</version>
         </dependency>
       </dependencies>
+      <properties>
+        <scala.version>2.9.2</scala.version>
+      </properties>
       <build>
         <plugins>
           <plugin>
