--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,8 @@
     <repo.scalariform>Select a profile</repo.scalariform>
     <repo.typesafe>Select a profile</repo.typesafe>
 
+    <main.basedir>${project.basedir}</main.basedir>
+
   </properties>
 
   <profiles>
@@ -463,6 +465,7 @@
           </configuration>
           <executions>
             <execution>
+              <phase>process-sources</phase>
               <goals>
                 <goal>check</goal>
               </goals>
@@ -471,6 +474,31 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.scalastyle</groupId>
+        <artifactId>scalastyle-maven-plugin</artifactId>
+        <!--
+          <version>0.2.0</version>
+          <configuration>
+            <verbose>false</verbose>
+            <failOnViolation>true</failOnViolation>
+            <includeTestSourceDirectory>false</includeTestSourceDirectory>
+            <failOnWarning>false</failOnWarning>
+            <sourceDirectory>${basedir}</sourceDirectory>
+            <configLocation>${basedir}/scala-ide-style-config.xml</configLocation>
+          </configuration>
+          <executions>
+            <execution>
+              <phase>process-sources</phase>
+              <goals>
+                <goal>check</goal>
+              </goals>
+            </execution>
+          </executions>
+        -->
+      </plugin>
+    </plugins>
   </build>
 
 
