--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <repo.scala-ide.root>http://download.scala-ide.org</repo.scala-ide.root>
 
     <!-- fixed versions -->
-    <sbt.version>0.13.0-SNAPSHOT</sbt.version>
+    <sbt.version>0.13.0-M1</sbt.version>
     <sbinary.version>0.4.1-pretending-SNAPSHOT</sbinary.version>
     <jline.version>0.9.94</jline.version>
     <ivy.version>2.2.0</ivy.version>
