Updated Sbt version used by the different Scala profiles
* When building for Scala 2.10.x, let's use Sbt 0.13.0-M1 artifacts
* When building for Scala 2.11.x, let's use the Sbt 0.13.0 SNAPSHOT artifacts

There is an additional catch. When building for Scala 2.10.x, the value of the
property ``sbt.version`` has a trailing ``SNAPSHOT``. Why? Becuase we are using
Scala 2.10.2-SNAPSHOT, and hence the Sbt artifacts have to be rebuilt **every
night**. In the Maven world this means that the artifacts version has to end with
``SNAPSHOT`` (there is really no way around this).

In case you decide to build for Scala 2.10.0 or Scala 2.10.1, then make sure to
pass ``-Dsbt.version=0.13.0-M1`` to the build script (no SNAPSHOT is needed
in this case because the Scala version is stable!).

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <repo.scala-ide.root>http://download.scala-ide.org</repo.scala-ide.root>
 
     <!-- fixed versions -->
-    <sbt.version>0.13.0-M1</sbt.version>
+    <sbt.version>Select a profile</sbt.version>
     <sbinary.version>0.4.1-pretending-SNAPSHOT</sbinary.version>
     <jline.version>0.9.94</jline.version>
     <ivy.version>2.2.0</ivy.version>
@@ -76,6 +76,14 @@
         <scala.version>2.10.2-SNAPSHOT</scala.version>
         <scala.era.major.version>2.10</scala.era.major.version>
         <version.suffix>2_10</version.suffix>
+        <!-- The version is odd, but correct. We need the `SNAPSHOT` in the sbt version
+            because we need to grab the latest Sbt artifacts compiled against the latest
+            Scala 2.10.2-SNAPSHOT.
+            If you want to build the Scala IDE against Scala 2.10.0 or Scala 2.10.1, make
+            sure to pass -Dsbt.version=0.13.0-M1 to the build script (no SNAPSHOT is needed
+            in this case because the Scala version is stable!)
+        -->
+        <sbt.version>0.13.0-M1-SNAPSHOT</sbt.version>
 
         <repo.scala-refactoring>${repo.scala-ide.root}/scala-refactoring-210x</repo.scala-refactoring>
         <repo.scalariform>${repo.scala-ide.root}/scalariform-210x</repo.scalariform>
@@ -89,6 +97,7 @@
         <scala.version>2.11.0-SNAPSHOT</scala.version>
         <scala.era.major.version>2.11</scala.era.major.version>
         <version.suffix>2_11</version.suffix>
+        <sbt.version>0.13.0-SNAPSHOT</sbt.version> <!-- We use Sbt 0.13 master for building against Scala 2.11.0-SNAPSHOT -->
 
         <repo.scala-refactoring>${repo.scala-ide.root}/scala-refactoring-211x</repo.scala-refactoring>
         <repo.scalariform>${repo.scala-ide.root}/scalariform-211x</repo.scalariform>
