--- a/org.scala-ide.sdt.debug.tests/pom.xml
+++ b/org.scala-ide.sdt.debug.tests/pom.xml
@@ -91,7 +91,12 @@
           </execution>
         </executions>
       </plugin>
-
+      <!--
+      <plugin>
+        <groupId>org.scalastyle</groupId>
+        <artifactId>scalastyle-maven-plugin</artifactId>
+      </plugin>
+      -->
     </plugins>
   </build>
 </project>
