--- a/org.scala-ide.sdt.core.tests/pom.xml
+++ b/org.scala-ide.sdt.core.tests/pom.xml
@@ -145,6 +145,11 @@
           </execution>
         </executions>
       </plugin>
+      
+      <!--<plugin>
+        <groupId>org.scalastyle</groupId>
+        <artifactId>scalastyle-maven-plugin</artifactId>
+      </plugin>-->
     </plugins>
   </build>
 
