Add Scalastyle plugin
For the beginning the only rules that are activated are rules that
check for the existence of trailing whitespaces and tabs.

To run the plugin manually simply type in:

  mvn scalastyle:check

This commits contains:

- A Scalastyle configuration file in `sdt.core`. It should be moved
  to the roor directory of Scala IDE once the Scalastyle Eclipse
  plugin is fixed (at the moment it can't read configuration files
  from non Eclipse projects).
- The main POM file is updated with all necessary information to
  run Scalastyle during the build.
- For all including projects, the POM files are updated to run
  Scalastyle during the build.
- The Scalastyle nature and the configuration file for the Scalastyle
  Eclipse plugin is added for each project.

--- a/org.scala-ide.sdt.core.tests/pom.xml
+++ b/org.scala-ide.sdt.core.tests/pom.xml
@@ -141,6 +141,19 @@
           </execution>
         </executions>
       </plugin>
+
+      <!-- Scalastyle -->
+      <plugin>
+        <groupId>org.scalastyle</groupId>
+        <artifactId>scalastyle-maven-plugin</artifactId>
+        <configuration>
+          <sourceDirectories>
+            <dir>src</dir>
+            <dir>test-workspace</dir>
+          </sourceDirectories>
+          <configLocation>../org.scala-ide.sdt.core/scala-ide-style-config.xml</configLocation>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
