--- a/org.scala-ide.sdt.core/pom.xml
+++ b/org.scala-ide.sdt.core/pom.xml
@@ -83,6 +83,18 @@
           </execution>
         </executions>
       </plugin>
+
+      <!-- Scalastyle -->
+      <plugin>
+        <groupId>org.scalastyle</groupId>
+        <artifactId>scalastyle-maven-plugin</artifactId>
+        <configuration>
+          <sourceDirectories>
+            <dir>src</dir>
+          </sourceDirectories>
+          <configLocation>../org.scala-ide.sdt.core/scala-ide-style-config.xml</configLocation>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
