--- a/pom.xml
+++ b/pom.xml
@@ -439,6 +439,35 @@
           <artifactId>maven-clean-plugin</artifactId>
           <version>${maven-clean.plugin.version}</version>
         </plugin>
+        <!-- Scalastyle -->
+        <plugin>
+          <groupId>org.scalastyle</groupId>
+          <artifactId>scalastyle-maven-plugin</artifactId>
+          <version>0.3.1</version>
+          <configuration>
+            <inputEncoding>UTF-8</inputEncoding>
+            <verbose>false</verbose>
+            <failOnViolation>true</failOnViolation>
+            <includeTestSourceDirectory>false</includeTestSourceDirectory>
+            <failOnWarning>false</failOnWarning>
+            <sourceDirectories>
+              <dir>org.scala-ide.sdt.core/src</dir>
+              <dir>org.scala-ide.sdt.debug/src</dir>
+              <dir>org.scala-ide.sdt.core.tests/src</dir>
+              <dir>org.scala-ide.sdt.core.tests/test-workspace</dir>
+              <dir>org.scala-ide.sdt.debug.tests/src</dir>
+              <dir>org.scala-ide.sdt.debug.tests/test-workspace</dir>
+            </sourceDirectories>
+            <configLocation>org.scala-ide.sdt.core/scala-ide-style-config.xml</configLocation>
+          </configuration>
+          <executions>
+            <execution>
+              <goals>
+                <goal>check</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
